--- a/src/components/Items/Items.css
+++ b/src/components/Items/Items.css
@@ -1,7 +1,9 @@
 .item-list {
     display: flex;
     flex-direction: column;
-    max-width: 750px;
+    max-width: 100%;
+    overflow-y: scroll;
+    height: 100vh;
     gap: 2rem;
 
     .item-list__item {
@@ -12,4 +14,17 @@
         padding: 1.5rem;
         gap: 1rem;
     }
+}
+
+.item-list::-webkit-scrollbar {
+    width: 10px;
+}
+
+.item-list::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: var(--fourth);
+}
+
+.item-list::-webkit-scrollbar-thumb:hover {
+    background: #6B6B6BFF;
 }
