--- a/src/components/Items/Items.css
+++ b/src/components/Items/Items.css
@@ -1,8 +1,53 @@
+.floating {
+    display: flex;
+    justify-content: space-between;
+    margin: 1rem 0;
+
+    .btn {
+        display: flex;
+        align-items: center;
+        line-height: 1.5;
+        border-radius: 3px;
+    }
+
+    .icon {
+        font-size: 15px;
+    }
+
+    .btn:hover {
+        background-color: #E6E6E6;
+    }
+
+    .pull-left {
+        .btn-refresh {
+            gap: 4px;
+            font-size: 1.2rem;
+            padding: 0.6rem 1rem;
+
+        }
+    }
+
+    .pull-right {
+        display: flex;
+        gap: 1rem;
+
+        .btn-next_post,
+        .btn-prev_post {
+            padding: 0.6rem 1rem;
+        }
+
+        .btn-sort {
+            padding: 0.45rem 1rem;
+        }
+    }
+}
+
 .item-list {
     display: flex;
     flex-direction: column;
     max-width: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
+    position: relative;
     height: 100vh;
     gap: 2rem;
 
