--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -9,6 +9,11 @@
         font-weight: 500;
     }
 
+    .title:hover {
+        opacity: 1;
+        text-decoration: underline;
+    }
+
     .pubdate {
         max-width: 60px;
         font-size: 1rem;
@@ -22,7 +27,18 @@
     line-height: 1.3;
 }
 
-.source {
-    font-size: 1.5rem;
-    font-weight: 500;
+.control-panel {
+    .btn-check {
+        display: flex;
+        align-items: center;
+        padding: 0.5rem 1rem;
+        line-height: 1.5;
+        font-size: 1.2rem;
+        gap: 5px;
+        border-radius: 3px;
+    }
+
+    .btn-check:hover {
+        background-color: #E6E6E6;
+    }
 }
