--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,12 +1,11 @@
 .container {
     display: flex;
     gap: 2rem;
-    margin-right: 2rem;
     overflow: hidden;
     height: 93vh;
 
     .navigator {
-        width: 400px;
+        width: 300px;
         padding-left: 1rem;
         padding-right: 1rem;
         padding-top: 1rem;
@@ -17,9 +16,8 @@
             flex-direction: row;
 
             .input.feed {
-                width: 300px;
                 border-radius: 5px;
-                padding: 0.9rem 0.8rem;
+                padding: 0.8rem;
                 margin-right: 1rem;
                 font-size: 1.5rem;
             }
@@ -41,7 +39,7 @@
 
     .content {
         margin: 0 auto;
-        width: 70%;
+        width: 75%;
 
         .toolbar {
             .item-title {
