--- a/src/components/Feeds/Feeds.css
+++ b/src/components/Feeds/Feeds.css
@@ -13,6 +13,13 @@
             font-weight: 500;
             color: black;
 
+            .title {
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                max-width: 230px;
+            }
+
             .icon {
                 font-size: 1.6rem;
             }
