--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -53,6 +53,17 @@
                 border-radius: 5px;
                 margin: 1rem 0;
             }
+
+            .sources {
+                display: flex;
+                flex-direction: row;
+                gap: 1.5rem;
+                align-items: center;
+
+                .source {
+                    font-size: 1.2rem;
+                }
+            }
         }
     }
 }
