Add showing feed icon

--- a/src/components/Feeds/Feeds.css
+++ b/src/components/Feeds/Feeds.css
@@ -23,6 +23,14 @@
             .icon {
                 font-size: 1.6rem;
             }
+
+            .icon.i-rss {
+                color: var(--secondary);
+            }
+
+            .source-icon {
+                width: 16px;
+            }
         }
     }
 }
