--- a/src/components/Feeds/Feeds.css
+++ b/src/components/Feeds/Feeds.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    margin: 1rem;
+    margin: 1rem 0.5rem;
 
     .feed-list__item {
         .feed {
