refactor: move list of feeds to context

--- a/src/components/Feeds/Feeds.module.scss
+++ b/src/components/Feeds/Feeds.module.scss
@@ -4,7 +4,7 @@
     gap: 1rem;
     margin: 1rem 0.5rem;
 
-    .feed-list__item {
+    .feed-item {
         .feed {
             display: flex;
             align-items: center;
