--- a/src/components/AsideBar/AsideBar.module.scss
+++ b/src/components/AsideBar/AsideBar.module.scss
@@ -38,8 +38,7 @@
     margin: 1rem;
 
     .nav {
-      .all-items,
-      .home {
+      .nav-link {
         display: flex;
         align-items: center;
         gap: 0.5rem;
