--- a/src/components/Items/Items.module.scss
+++ b/src/components/Items/Items.module.scss
@@ -71,7 +71,7 @@
   gap: 2rem;
   scroll-behavior: smooth;
 
-  .item-list__item {
+  .item {
     display: flex;
     flex-direction: column;
     background-color: var(--light);
@@ -94,8 +94,27 @@
   background: #6B6B6BFF;
 }
 
-.notif-not_found {
-  text-align: center;
-  font-size: 1.4rem;
-  margin-top: 3rem;
+.load-container {
+  display: flex;
+  justify-content: center;
+
+  .loader {
+    width: fit-content;
+    font-weight: bold;
+    font-family: monospace;
+    font-size: 25px;
+    color: #393e46;
+    clip-path: inset(0 3ch 0 0);
+    animation: l4 1s steps(4) infinite;
+  }
+
+  .loader:before {
+    content: "Loading..."
+  }
+
+  @keyframes l4 {
+    to {
+      clip-path: inset(0 -1ch 0 0)
+    }
+  }
 }
