feat: Add notification about not found feed

--- a/src/components/CellContent/CellContent.module.scss
+++ b/src/components/CellContent/CellContent.module.scss
@@ -26,3 +26,11 @@
     }
   }
 }
+
+.not-exist {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+}
