--- a/src/components/Items/Items.module.scss
+++ b/src/components/Items/Items.module.scss
@@ -107,27 +107,8 @@
   background: #6B6B6BFF;
 }
 
-.load-container {
-  display: flex;
-  justify-content: center;
-
-  .loader {
-    width: fit-content;
-    font-weight: bold;
-    font-family: monospace;
-    font-size: 25px;
-    color: #393e46;
-    clip-path: inset(0 3ch 0 0);
-    animation: l4 1s steps(4) infinite;
-  }
-
-  .loader:before {
-    content: "Loading..."
-  }
-
-  @keyframes l4 {
-    to {
-      clip-path: inset(0 -1ch 0 0)
-    }
-  }
+.not-exist {
+  font-size: 1.6rem;
+  text-align: center;
+  margin-top: 3rem;
 }
