--- a/src/pages/Settings/Settings.module.scss
+++ b/src/pages/Settings/Settings.module.scss
@@ -35,6 +35,10 @@
         width: 100px;
         font-size: 1.4rem;
         font-weight: 600;
+
+        &.password {
+          padding-bottom: 2rem;
+        }
       }
 
       .input-container {
@@ -44,6 +48,12 @@
           padding: 0.6rem 1.2rem;
           border-radius: 4px;
           border: 1px solid;
+        }
+
+        .notification {
+          color: #737373;
+          font-size: 1.2rem;
+          margin: 0.5rem 0;
         }
       }
     }
