--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,6 +1,29 @@
 .main {
-  .notification {
-    font-size: 2rem;
-    font-weight: 300;
+  .toolbar {
+    .title {
+      font-size: 3.5rem;
+      font-weight: 700;
+      color: var(--primary);
+    }
+
+    .hr {
+      border: 2px solid var(--fourth);
+      border-radius: 5px;
+      margin: 1rem 0;
+    }
+  }
+
+  .h2 {
+    font-size: 2.8rem;
+    font-weight: 600;
+    text-align: center;
+  }
+
+  .content {
+    .h3 {
+      font-size: 2rem;
+      font-weight: 300;
+      margin-bottom: 2rem;
+    }
   }
 }
